Add 2 sina blogs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="site">
-		<div class="title"><a href="/">Weichen Li<br/>iaadoa</a></div>
+		<div class="title"><a href="/">Weichen Li<br/>iaadoa@nku</a></div>
 		{{ content }}
 		<div class="footer">
 			<div class="contact">
