--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,11 +6,13 @@ layout: default
 	<p class="meta">{{ page.date | date_to_string }}</p>
 	{{ content }}
 
-    <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
-    <g:plusone></g:plusone>
-
+        <span class="jiathis_txt">分享到：</span>
+        <a class="jiathis_button_weixin">微信</a>
+        <a href="http://www.jiathis.com/share"  class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank">更多</a>
+        <a class="jiathis_counter_style"></a>
+        <script type="text/javascript" src="http://v3.jiathis.com/code/jia.js?uid=1" charset="utf-8"></script>
 </div>
-
+<!-- JiaThis Button END -->
 
 {% if site.related_posts != empty %}
 <div id="related">
