--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,8 @@ layout: default
 	<h1>{{ page.title }}</h1>
 	<p class="meta">{{ page.date | date_to_string }}</p>
 	{{ content }}
-
+</div>
+<div id="ckepop">
         <span class="jiathis_txt">分享到：</span>
         <a class="jiathis_button_weixin">微信</a>
         <a href="http://www.jiathis.com/share"  class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank">更多</a>
